# mailgun_v3

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yml
examples/: send_email.rs  send_email_eu_region.rs
src/: email.rs  lib.rs  templates.rs  validation.rs
