[package]
name = "mailgun_v3"
description = "reqwest based web bindings for Mailgun's v3 JSON API"
readme = "README.md"
repository = "https://github.com/otterandrye/mailgun_v3"
license = "MIT"
version = "0.13.0"
authors = ["Nathan Merritt <nathan@gnmerritt.net>"]
keywords = ["mailgun", "reqwest", "email", "api"]
categories = ["api-bindings"]
edition = "2021"

[badges]
travis-ci = { repository = "otterandrye/mailgun_v3", branch = "master" }

[dependencies]
chrono = { version = "^0.4.23", default-features = false, features = ["clock"] }
reqwest = { version = "^0.11.13", features = ["json", "blocking", "multipart"] }
serde = "^1.0.152"
serde_derive = "^1.0.152"
serde_json = "^1.0.91"

[dev-dependencies]
mockito = "^0.31"
tokio = { version = "^1.23", features = ["full"] }
